--- a/styles.scss
+++ b/styles.scss
@@ -21,4 +21,11 @@ html { /* stylelint-disable-line */
 
 
 // TODO sækja allar sass skrár
-@import "scss/header.scss";
+@import "scss/haus.scss";
+@import "scss/Forsida.scss";
+@import "scss/Staff.scss";
+@import "scss/Cart.scss";
+@import "scss/Course.scss";
+@import "scss/Products.scss";
+@import "scss/fotur.scss";
+@import "scss/button.scss";
