--- a/styles.scss
+++ b/styles.scss
@@ -14,9 +14,16 @@
 html { /* stylelint-disable-line */
   box-sizing: border-box;
   overflow-x: hidden;
-  max-width: 
+  max-width: 1200px;
+  font-size: 16px;
 
   // TODO fleiri grunn stillingar
+}
+
+h1{
+  font-family: "Oswald", Verdana, serif;
+  font-size: 2.25rem;
+  
 }
 
 
