--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,12 +1,68 @@
-header{
-    background-color: #ff5000;
+.header {
+  background-color: #ff5000;
+  justify-content: center;
+  display: flex;
+  padding: 0 20px;
+
+  &__box {
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px 0;
+  }
+}
+.box {
+  &__title {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2rem;
+    margin: 0 auto;
+  }
+  &__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     text-align: center;
-    color: #000000;
-    width: 100%;
-    height: 20vh;
-    display: block;
-    .h1{
-        font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  &__lists {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: flex-end;
+    width: 50%;
+
+    &__current {
+      text-decoration: underline;
+      color: blueviolet;
     }
 
+    & a {
+      margin: 10px;
+      text-decoration: none;
+      color: #000000;
+    }
+    & a:hover {
+      color: #fffcf2;
+    }
+  }
+  &__cart {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 30%;
+    & a {
+      text-decoration: none;
+      text-transform: capitalize;
+      font-weight: 500;
+      color: #000000;
+    }
+    & a:hover {
+      color: #fffcf2;
+    }
+    & img {
+      height: 70%;
+
+    }
+  }
 }
