--- a/scss/Staff.scss
+++ b/scss/Staff.scss
@@ -1,13 +1,71 @@
-@import "scss/header.scss";
-
-.staff__Dalkar{
-
+.main {
+  
 }
-.staff__Linur{
+.staff {
+  display: flex;
+  flex-direction: row;
+ padding: 0 20px;
 
-}
-.staff{
-    &__img{
-        width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+
+  &__cards {
+    margin-left: -10px;
+    margin-right: -10px;
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+
+    background-color: transparent;
+    &:hover{
+        transform: rotateY(180deg);
     }
+  }
+
+&__card{
+    max-width: 50%;
+    padding-right: 10px;
+    padding-left: 10px;
+
+    position: relative;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0,2);
+
+    &__front{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+
+        background-color: purple;
+
+    }
+    &__back{
+        background-color: lawngreen ;
+        color: lightcoral;
+        transform: rotateY(180deg);
+
+    }
+
+}
+  &__img {
+      object-fit: contain;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      max-width: 100%;
+      width: 100%;
+  }
 }
