--- a/scss/Staff.scss
+++ b/scss/Staff.scss
@@ -1,10 +1,9 @@
 .main {
-
 }
 .staff {
   display: flex;
   flex-direction: row;
- padding: 0 20px;
+  padding: 0 20px;
 
   max-width: 1200px;
   display: flex;
@@ -15,8 +14,7 @@
   margin-right: auto;
   width: 100%;
 
-
-  &__cards {
+  &__row {
     margin-left: -10px;
     margin-right: -10px;
     max-width: 1200px;
@@ -26,18 +24,24 @@
     justify-content: space-between;
   }
 
-&__card{
+  &__col{
     max-width: 50%;
     padding-right: 10px;
     padding-left: 10px;
-}
+    min-width: 50vh;
+    @media(min-with:500px) {
+        min-width: 100vh;
+       
+        
+    }
+  }
   &__img {
-      object-fit: contain;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      height: 100%;
-      max-width: 100%;
-      width: 100%;
+    object-fit: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 100%;
   }
 }
