--- a/scss/Course.scss
+++ b/scss/Course.scss
@@ -1,27 +1,25 @@
-main{
+.main__course{
 max-width: 1200px;
+box-sizing: border-box;
+}
+
+.course__h1__2{
+    padding-top:30px;
 }
 
 .course{
     display:flex;
     flex-direction: row;
-    margin-left: auto;
-    margin-right: auto;
     padding: 20px;
 
 }
 
-.course h1{
-    font-size: 2rem;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.course p{
+.course__p{
     display: flex;
     flex-direction: column;
     margin: 20px 0;
     font-size: 1.125rem;
+    line-height: 2rem;
     width:100%;
     justify-content: space-evenly;
     justify-items: center;
@@ -42,55 +40,120 @@ max-width: 1200px;
     align-content: space-around;
     margin-left: auto;
     margin-right: auto;
-}
-
-.course__upplysingar:nth-child(3) {
-    order: 4; 
+    width: 100%;
 }
 
 .course__row{
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: -10px;
+    margin-right: -10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100%;
-    max-width: 100%;
-    width: 100%;
+ 
 }
 
 
 .course__col__item__info{
     display: flex;
-    font-size: 1rem;
+    font-size: 0.875rem;
     font-family: sans-serif;
     border-radius: 3px;
-    padding: 20px;
+    padding-top:20px;
     justify-content: space-between;
 }
 
 .course__col__item__input{
     border: 1px solid;
-    border-radius: 3px;
     display: inline-flex;
-    line-height: 1.125rem;
+    line-height: 2rem;
+    width:70%;
     justify-content: space-between;
 
 }
 
-.course__col .course__col__item {
-    width: 5rem;
+.course__col__item__info__courses{
+    border: 1px solid;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2rem;
+    width:70%;
+    justify-content: space-between;
 }
 
-.course__col{
-    margin-top: 20px;
-    margin-bottom: 20px;
+.course__col__item__input__month{
+    border: 1px solid;
+    display: inline-flex;
+    line-height: 1rem;
+    font-size: 1rem;
+    width:12%;
+    height: 2rem;
+    justify-content: space-between; 
+}
+
+.course__col__item__input__year{
+    border: 1px solid;
+    display: inline-flex;
+    line-height: 1rem;
+    font-size: 1rem;
+    height: 2rem;
+    width:20%;
+    justify-content: space-between;
+}
+
+.course__col__item {
+    justify-content: space-between;
+}
+
+.course__col__1{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
     max-width: 100%;
-    width: 100%;
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.course__col__2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.course__col__3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 41.66%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.course__col__4{
+    margin-left:8%;
+}
+
+.course__col__5{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 41.66%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.course__col__6{
+    margin-left:8%;
 }
 
 .course__img{
@@ -106,17 +169,25 @@ max-width: 1200px;
 .course__button{
     margin-left: auto;
     margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-    line-height: 2rem;
-    max-width: 40%;
-    max-height: 10%;
+    border-radius: 5px;
     width: 15rem;
-    height: 100%;
+    height: 3rem;
     transition: 200ms ease-in-out;
     border-radius: 3px;
+    font-size: 1rem;
+}
+
+.course__col__item__info__month{
+    padding-top: 0;
+   padding-left: 22px;
+}
+
+.course__col__item__info__year{
+    padding-top: 0;
 }
 
 @media (max-width: 500px){
