--- a/styles.scss
+++ b/styles.scss
@@ -16,6 +16,8 @@ html { /* stylelint-disable-line */
   overflow-x: hidden;
   max-width: 1200px;
   font-size: 16px;
+  margin-right:auto;
+  margin-left:auto;
 
   // TODO fleiri grunn stillingar
 }
