--- a/scss/Staff.scss
+++ b/scss/Staff.scss
@@ -27,7 +27,7 @@
   &__col{
     max-width: 50%;
     padding-right: 10px;
-    padding-left: 10px;
+    padding-left: 10px;s
     min-width: 50vh;
     @media(min-with:500px) {
         min-width: 100vh;
