--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,9 +3,9 @@
   justify-content: center;
   display: flex;
   padding: 0 20px;
+  max-width: 100vw;
 
   &__box {
-    max-width: 1200px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -14,7 +14,6 @@
 }
 .box {
   &__title {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2rem;
     margin: 0 auto;
   }
