--- a/scss/Cart.scss
+++ b/scss/Cart.scss
@@ -113,3 +113,182 @@
     width: 100%;
     height: 2rem;
   }
+
+  /* Karfa - greiðsluupplýsingar*/
+
+  .main__cart {
+    max-width: 1200px;
+    box-sizing: border-box; }
+  
+  .cart__h1__2 {
+    padding-top: 30px; }
+  
+  .cart {
+    display: flex;
+    flex-direction: row;
+    padding: 20px; }
+  
+  .cart__p {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+    font-size: 1.125rem;
+    line-height: 2rem;
+    width: 100%;
+    justify-content: space-evenly;
+    justify-items: center;
+    font-family: sans-serif; }
+  
+  @media (max-width: 500px) {
+    .cart {
+      flex-direction: column; } }
+  
+  .cart__cards {
+    max-width: 1200px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-around;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; }
+  
+  .cart__row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+  
+  .cart__col__item__info {
+    display: flex;
+    font-size: 0.875rem;
+    font-family: sans-serif;
+    border-radius: 3px;
+    padding-top: 20px;
+    justify-content: space-between; }
+  
+  .cart__col__item__input {
+    border: 1px solid;
+    border-radius: 5px;
+    display: inline-flex;
+    line-height: 2rem;
+    width: 70%;
+    justify-content: space-between; }
+  
+  .cart__col__item__info__carts {
+    border: 1px solid;
+    display: inline-flex;
+    font-size: 1rem;
+    height: 2rem;
+    width: 70%;
+    justify-content: space-between; }
+  
+  .cart__col__item__input__month {
+    border: 1px solid;
+    display: inline-flex;
+    line-height: 1rem;
+    font-size: 1rem;
+    width: 12%;
+    height: 2rem;
+    justify-content: space-between; }
+  
+  .cart__col__item__input__year {
+    border: 1px solid;
+    display: inline-flex;
+    line-height: 1rem;
+    font-size: 1rem;
+    height: 2rem;
+    width: 20%;
+    justify-content: space-between; }
+  
+  .cart__col__item {
+    justify-content: space-between; }
+  
+  .cart__col__1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px; }
+  
+  .cart__col__2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 50%;
+    padding-left: 10px;
+    padding-right: 10px; }
+  
+  .cart__col__3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 41.66%;
+    padding-left: 10px;
+    padding-right: 10px; }
+  
+  .cart__col__4 {
+    margin-left: 8%; }
+  
+  .cart__col__5 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 41.66%;
+    padding-left: 10px;
+    padding-right: 10px; }
+  
+  .cart__col__6 {
+    margin-left: 8%; }
+  
+  .cart__img {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    max-width: 100%;
+    width: 100%; }
+  
+  .cart__button {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #00b7ff;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
+    width: 15rem;
+    height: 3rem;
+    transition: 200ms ease-in-out;
+    border-radius: 3px;
+    font-size: 1rem; }
+  
+    .cart__button:hover{
+      color: #000000;
+    font-size: 14px;
+    text-decoration: none;
+    border:none;
+    background-color: #000000;
+    color: white;
+    background-color: #ff5000; 
+    }
+  
+  .cart__col__item__info__month {
+    padding-top: 0;
+    padding-left: 22px; }
+  
+  .cart__col__item__info__year {
+    padding-top: 0; }
+  
+  @media (max-width: 500px) {
+    .cart__col {
+      margin-top: 20px; } }
