--- a/scss/Course.scss
+++ b/scss/Course.scss
@@ -172,14 +172,25 @@ box-sizing: border-box;
     margin-top: 40px;
     margin-bottom: 20px;
     display: flex;
+    align-items: center;
     justify-content: center;
+    background-color: #00b7ff;
     border-radius: 5px;
     width: 15rem;
     height: 3rem;
     transition: 200ms ease-in-out;
     border-radius: 3px;
     font-size: 1rem;
+    font-size: 14px;
+    text-decoration: none;
+    border: none;
 }
+
+.course__button:hover{
+background-color: #ff5000;
+color:white;
+}
+
 
 .course__col__item__info__month{
     padding-top: 0;
