--- a/styles.scss
+++ b/styles.scss
@@ -39,4 +39,4 @@ h1{
 @import "scss/Products.scss";
 @import "scss/footer.scss";
 @import "scss/button.scss";
-@import "scss/config.scss"
+@import "scss/config.scss";
