--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -15,6 +15,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+
 }
 .fotur__texti__listi {
     margin-top: 20px;
@@ -38,4 +39,7 @@ justify-content: center;
 align-items: flex-end;
 padding-top: 20px;
 padding-bottom: 20px;
+}
+.footer__list__text:hover{
+    color:black;
 }
